Mobile date picker z-index working correctly

--- a/src/styles/editReservationForm.scss
+++ b/src/styles/editReservationForm.scss
@@ -4,7 +4,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 11000;
+  z-index: 1000;
   box-sizing: border-box;
 
   section {
